--- a/css/style.css
+++ b/css/style.css
@@ -1,83 +1,134 @@
 body{
-			background-color: #dedede;
+			background-image: url("../img/fundo.png");
 			font-size: 13px;
+			color: rgba(194, 194, 194);
 		}
 
+header, footer{
+			width: 100%;
+			background-color: rgba(39, 30, 107, 0.60); 	
+			padding: 5px
+         }
+
 figure{
-	        text-align: center; 
-	        border-style: dashed;
-	        margin: 150px 550px 150px 550px;
+	        text-align: justify; 
+	        margin: 1% 15% 1% 15%;
+		}
+
+.container{
+			width: 80%;
+			margin-left: 200px;
+			margin-right: auto;
+
+		}
+
+.margin_top {
+			  margin-top: 6%;
+
+
 		}
 
 h1{
 			text-align: center;
 			font-size: 60px;
 			font-weight: bold;
-	        border-style: solid;
-	        margin: 25px 500px 75px 500px;
-
+	        margin-top: 2%;
+	        margin-bottom: 5%;
+	        margin-right: 25%;
+	        margin-left: 25%;
 		}
 
 h2{
 			text-align: center;
-	        font-size: 45px;
-	        font-weight: bold;
-	        border-style: dashed;
-	        margin: 25px 600px 75px 600px;
+	        font-size: 40px;
+	        font-weight: bold;        
+	        margin-top: 5%;
+	        margin-bottom: 3%;
 		}
 
  h3{
-	    	font-size: 35px;
+	    	
+	    	text-align: center;
+	        font-size: 45px;
 	        font-weight: bold;
-	        border-style: dotted;
-	        margin: 25px 1620px 75px 10px;
+	        margin-top: 5%;
+	   		margin-bottom: 3%; 
 	    } 
 
 p{
 			font-size: 25px;
-		    text-align: center;
-	 
+		    text-align: justify;
+	 		margin-top: 2%;
+	 		margin-bottom: 2%;
+	 		margin-left: 10%;
+	 		margin-right: 10%;
+	    }
+
+.center{
+			font-size: 25px;	
+			text-align: center;	
+
+	
 	    }
 
 ul li, ol li{
 	    	font-size: 25px;
 	    	text-decoration: underline;
-	    	margin: 10px 400px 10px 10px;
+	    	margin-top: 2%;
+	 		margin-bottom: 2%;
+	 		margin-left: 20%;
+	 		margin-right: 20%;
+	    	text-align: justify;
 	    }
 
+table {
+		  border-collapse: collapse;
+		  width: 50%;
+		  font-size: 25px;
+		  background-color: rgba(153, 204, 255, 0.20);
+		  margin-left: 25%;
+		  margin-right: 25%;
+		  margin-bottom: 3%
+	    }
+
+td {  
+	      border: 4px solid #000000;
+	      text-align: center;
+	      padding: 1%;
+	      margin-left: 5%;
+	      margin-right: 5%;
+         }
+
+th {
+		  font-weight: bold;
+		  padding: 1%;
+	      margin-left: 5%;
+	      margin-right: 5%;
+	      border: 4px solid #000000;
+         
+         }
+
  a:link {
-		  color: #251BFF;
+		  color: #dedede;
 		  background-color: transparent;
 		}
 
 a:visited {
-		  color: #9135FF;
+		  color: #c8fefe;
 		  background-color: transparent;
 		  text-decoration: none;
 		}
 
 a:hover {
-		  color: #FF35C5	;
+		  color: #c8fefe;
 		  background-color: transparent;
 		  text-decoration: underline;
 		}
 
 a:active {
-		  color: yellow;
+		  color: #dedede;
 		  background-color: transparent;
 		  text-decoration: underline;
 		}
 
-table {
-		  border-collapse: collapse;
-		  width: 100%;
-		  font-size: 25px;
-	    }
 
-td, th {  
-	      border: 1px solid #000000;
-	      text-align: center;
-	      padding: 8px;
-
-
-         }
