--- a/css/style.css
+++ b/css/style.css
@@ -8,16 +8,16 @@ header, footer{
 			width: 100%;
 			background-color: rgba(39, 30, 107, 0.60); 	
 			padding: 5px
-         }
+}
 
 figure{
 	        text-align: justify; 
 	        margin: 1% 15% 1% 15%;
-		}
+}
 
 .container{
-			width: 80%;
-			margin-left: 200px;
+			width: 100%;
+			margin-left: auto;
 			margin-right: auto;
 
 		}
