--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,61 @@
+/* Body */
+
 body{
 			background-image: url("../img/fundo.png");
-			font-size: 13px;
 			color: rgba(194, 194, 194);
+			font-family: 'Ubuntu Mono', monospace;
 		}
 
-header, footer{
-			width: 100%;
-			background-color: rgba(39, 30, 107, 0.60); 	
-			padding: 5px
-}
 
-figure{
-	        text-align: justify; 
+/* Header e Footer */
+
+header, footer{
+			width: 99.4%;
+			background-color: rgba(	120, 120, 151, 0.60); 	
+			padding: 5px;
+			text-align:center;
+			margin-right: auto;
+			margin-left: auto;
+		}	
+
+
+/* Imagens */
+
+figure   {
+	        text-align: center;
 	        margin: 1% 15% 1% 15%;
-}
+	       
+        }
+
+.imagerover img {
+		  transition: 0.2s;
+   		}
+
+.imagerover img:hover{
+    	   transform: scale(1.10);
+    	   transition: 0.2s;
+		}     
+
+
+/* Classes */
 
 .container{
 			width: 100%;
 			margin-left: auto;
 			margin-right: auto;
-
+            font-size: 150%;
 		}
 
 .margin_top {
 			  margin-top: 6%;
-
-
 		}
+
+.center{
+			font-size: 100%;	
+			text-align: center;	
+	    }		
+
+/* Titulos */
 
 h1{
 			text-align: center;
@@ -55,20 +84,16 @@ h2{
 	   		margin-bottom: 3%; 
 	    } 
 
+
+/* Textos */
+
 p{
-			font-size: 25px;
+			
 		    text-align: justify;
 	 		margin-top: 2%;
 	 		margin-bottom: 2%;
 	 		margin-left: 10%;
 	 		margin-right: 10%;
-	    }
-
-.center{
-			font-size: 25px;	
-			text-align: center;	
-
-	
 	    }
 
 ul li, ol li{
@@ -81,22 +106,36 @@ ul li, ol li{
 	    	text-align: justify;
 	    }
 
+
+/* Tabela */
+
 table {
+		 
 		  border-collapse: collapse;
-		  width: 50%;
-		  font-size: 25px;
+		  width: 100%;
+		  font-size: 1.2em;
 		  background-color: rgba(153, 204, 255, 0.20);
-		  margin-left: 25%;
-		  margin-right: 25%;
+		  margin-left: auto;
+		  margin-right: auto;
 		  margin-bottom: 3%
+	    
 	    }
 
+tr{
+		  width: 100%;
+		  width: 50%;
+		  height: 30%;
+		  text-align: center;
+		  padding: 4px solid #000000;
+		}
+
 td {  
-	      border: 4px solid #000000;
+          border: 4px solid #000000;
 	      text-align: center;
 	      padding: 1%;
 	      margin-left: 5%;
-	      margin-right: 5%;
+	      margin-right: 5%;    
+
          }
 
 th {
@@ -108,7 +147,10 @@ th {
          
          }
 
- a:link {
+
+/* Link */
+
+a:link {
 		  color: #dedede;
 		  background-color: transparent;
 		}
@@ -123,6 +165,7 @@ a:hover {
 		  color: #c8fefe;
 		  background-color: transparent;
 		  text-decoration: underline;
+		  
 		}
 
 a:active {
