--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ figure   {
 		}
 
 .center{
-			font-size: 100%;	
+			font-size: 1em;	
 			text-align: center;	
 	    }		
 
@@ -59,7 +59,7 @@ figure   {
 
 h1{
 			text-align: center;
-			font-size: 60px;
+			font-size: 2em;
 			font-weight: bold;
 	        margin-top: 2%;
 	        margin-bottom: 5%;
@@ -69,7 +69,7 @@ h1{
 
 h2{
 			text-align: center;
-	        font-size: 40px;
+	        font-size: 1.5em;
 	        font-weight: bold;        
 	        margin-top: 5%;
 	        margin-bottom: 3%;
@@ -78,7 +78,7 @@ h2{
  h3{
 	    	
 	    	text-align: center;
-	        font-size: 45px;
+	        font-size: 1em;
 	        font-weight: bold;
 	        margin-top: 5%;
 	   		margin-bottom: 3%; 
